Update .gitignore and system_setup.py script.

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@
 !/.local/share/fonts
 /.local/share/fonts/*
 !/.local/share/fonts/nerd-fonts
+!/.local/share/gnome-background-properties
 
 !/Pictures
 /Pictures/*
